feat: Clear summary and hide cost label when context is empty